test/files/neg/interop_erasuretags_arenot_classmanifests.check
interop_erasuretags_arenot_classmanifests.scala:3: error: could not find implicit value for parameter m: ClassManifest[T]
    println(classManifest[T])
                         ^
one error found
